--- a/styles.css
+++ b/styles.css
@@ -4,22 +4,63 @@
   background-color: #5E4485;
   color: #FFF;
   padding: 1% 0;
-  font-size: 1.2em
-  border:0
+  font-size: 1.2em;
+  border:0;
 }
 .navbar-brand{
   float:left;
   min-height: 55px;
-  padding:0 15px 5px
+  padding:0 15px 5px;
 }
 .navbar-inverse .navbar-nav .active a, .navbar-inverse .navbar-nav .active a:focus, .navbar-inverse .navbar-nav .active a:hover{
   color:#5E4485;
   background-color:#FFF;
 }
 .navbar-inverse .navbar-nav li a{
-  color:#D5D5D5
+  color:#D5D5D5;
 }
 .carousel-caption{
 top: 50%;
-transform: translateY();
+transform: translateY(-50%);
+text-transform: uppercase;
+}
+.btn{
+  font-size:18px;
+  color: #FFF;
+  paddind: 12px 22px;
+  background:#5E4485;
+  border:2px solid #FFF;
+}
+.container{
+  margin: 4% auto;
+}
+#icon{
+  max-width: 200px;
+  margin:1% auto;
+}
+footer{
+  width: 100%;
+  bacground-color: #5E4485;
+  padding: 5%;
+  color: #FFF;
+}
+.fa{
+  padding: 15px;
+  font-size:30px;
+  color:#FFF;
+}
+.fa:hover{
+  color:#D5D5D5;
+  text-decoration: none;
+}
+h2{
+  font-size: 1.7em;
+}
+#icon{
+  max-width: 150px;
+}
+@media (max-width: 600px) {
+  carousel-caption {
+  display:none;
+    }
 }
